# Driving-on-Surfelgrid

./: README.md  handlemap.sh  readme.md  show.rviz  start.sh
ablation/: sinterrain.txt  stepfall.txt
map_data/: green_surfel.txt  level1.txt  level2.txt  level3.txt  multi_case.txt  multi_extrem.txt  outdoor_slop_surfel.txt  spiral_surfelgrid.txt  underground_surfelgrid.txt  uselesss.txt
path_data/: traj.txt
src/hybrida/: CMakeLists.txt
src/hybrida/include/: CorridorBuilder2d.hpp  Surf.hpp  algorithm.hpp  astar_sur.hpp  constants.h  nav_uneven.hpp  node3d.hpp  non_uniform_bspline.hpp
src/hybrida/launch/: t.launch
src/hybrida/src/: algorithm.cpp  astar_sur.cpp  dubins.cpp  main.cpp  nav_uneven.cpp  node3d.cpp  non_uniform_bspline.cpp  protect_cost.cpp  uneven_opt.cpp  uneven_optcopy
src/planeoct_server/: CMakeLists.txt  package.xml
src/planeoct_server/include/: Gridsurf.hpp  Teclas.hpp
src/planeoct_server/launch/: t.launch
src/planeoct_server/src/: Gridsurf.cpp  Teclas.cpp
src/show_pcldata/: CMakeLists.txt  package.xml
src/show_pcldata/src/: show_data.cpp
src/tra_result/: easy_result.txt  hard_result.txt  multi_result.txt  spiral_result.txt  spiral_result_test.txt
src/ugv_sim/scout_lidar/putn_map/map1/meshes/: 12-23terrain1.dae  12-23terrain2.dae  12-23terrain3.dae  12-24terrain1-difficult.dae  12-24terrain2.dae  12-24terrain3.dae  easy_sin.dae  map1.dae  map1_uneven.dae
src/ugv_sim/scout_lidar/putn_map/worlds/: map1 copy.world  map1.world  map1_corn.world  map1_exp2.world  map1_exp3.world  map1_lowwall.world
src/ugv_sim/scout_lidar/realsense_ros_gazebo/urdf/: test.xacro
src/ugv_sim/scout_lidar/scout_description/urdf/: scout_v2.xacro
src/ugv_sim/scout_lidar/scout_gazebo_sim/launch/: scout_empty_world.launch  spawn_scout_v2.launch
